Added sold out button

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -51,6 +51,18 @@ main section.categories-show {
         font-size: 0.8em;
       }
 
+      aside.sold_out {
+        position: absolute;
+        top: 0;
+        left: 0;
+        padding: 10px;
+        background-color: #eee;
+        border-top-right-radius: 20px;
+        border-bottom-left-radius: 4px;
+        font-size: 0.8em;
+      }
+
+
       &:hover {
 
         border-color: #999;
