--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,12 +7,20 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+  <% if current_user %>
+  Signed in as <%= current_user.name %> | <%= link_to "Logout", '/logout' %>
+  <% else %>
+  <%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup' %>
+  <% end %>
   <%= render 'layouts/top_nav' %>
 
   <main class="container">
-    <%= yield %>
+
   </main>
+
+
+
+<%= yield %>
 
   <%= yield :end_of_body %>
 </body>
