--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -33,6 +33,13 @@
             <span class="text-danger"><%= fa_icon 'lock', text: 'Admin' %></span>
             <span class="caret"></span>
           </a>
+          <div>
+            <% if current_user %>
+                Signed in as <%= current_user.name %> | <%= link_to "Logout", '/logout' %>
+                 <% else %>
+                 <%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup' %>
+           <% end %>
+          </div>
           <ul class="dropdown-menu">
             <li><%= link_to 'Dashboard', [:admin, :root] %></li>
             <li><%= link_to 'Products',  [:admin, :products] %></li>
