--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -2,11 +2,30 @@
 
   <header class="page-header">
     <h1>Order #<%= @order.id %></h1>
+    <h3><%= @order.email %></h3>
+    <tbody><% @order.line_items.each do|item| %>
+      <%= image_tag(item.product.image.tiny) %>
+      <%= item.product.name%>
+      <%= item.product.description %>
+      <%=item.total_price_cents %>
+      <%end%>
+    </tbody>
   </header>
 
   <div class="order-summary jumbotron">
     <h4>Thank you for your order!</h4>
   </div>
+
+  <tfoot>
+  <tr>
+    <th colspan="3">
+      TOTAL:
+    </th>
+    <th>
+      <%=@order.total_cents %>
+    </th>
+  </tr>
+</tfoot>
 
   <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
 
