--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -4,6 +4,11 @@
     <h1>My Cart</h1>
   </header>
 
+  <%if cart.blank?%>
+    <p>Your shopping cart is empty.</p>
+  <%=link_to 'Home', :root, class: 'btn btn-info' %>
+
+    <%else%>
   <div class="panel panel-default items">
     <table class="table table-bordered">
       <thead>
@@ -50,4 +55,8 @@
     </div>
   </div>
 
+  <%end%>
+
 </section>
+
+
